--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 									<!-- Source Code Line and Message -->
 									<div class="project-code">
 										<hr>
-										<p>Code: <span>Github</span></p>
+										<p>Code: <a href="https://github.com/shanedirksen/GUARD">Github</a></p>
 									</div>
 								</div>
 							</div>
