--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 						<article id="about">
 							<h2 class="major">About</h2>
 							<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-							<p>Hello, I'm Shane Dirksen, I'm from California, I'm a US Army veteran, and I hold a Bachelor's Degree in Computer Science from Cal Poly Pomona. I have a tremendous interest in AI research, particularly with deep learning applications like computer vision.</p>
+							<p>Hello, I'm Shane Dirksen, I'm from California, I'm a US Army veteran, and I hold a Bachelor's Degree in Computer Science from Cal Poly Pomona and I'm a PhD student at UC Santa Barbara. I have an interest in AI research, particularly with deep learning applications like computer vision.</p>
 						</article>
 					
 
