--- a/index.html
+++ b/index.html
@@ -144,6 +144,12 @@
 							
 							<!-- Education -->
 							<h3>Education</h3>
+
+							<!-- Cal Poly Pomona -->
+							<strong>University of California, Santa Barbara</strong> <em>Fall 2024 – Current</em>
+							<ul>
+								<li>Working in Professor Tobias Hollerer's lab.</li>
+							</ul>
 							
 							<!-- Cal Poly Pomona -->
 							<strong>Cal Poly Pomona, Pomona, CA</strong> <em>Summer 2021 – Spring 2023</em>
